# SDR

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.json  datalink.cpp  datalink_test.cpp  fm_radio.c  fm_scan.c  link_rx.cpp  link_test.cpp  link_tx.cpp  pluto_eth_bridge.c  rx_example.c  sol8.cpp  sol8_test.cpp
cmake/: FindLibIIO.cmake  FindLiquidDSP.cmake
fpga/: hls_build.tcl  qpsk_demod_hls.cpp
fpga/bd/: pluto_sdr_bd.tcl
fpga/hls/gain_block/: gain_block.cpp  hls_build.tcl
fpga/hls/qpsk_modem/: hls_build.tcl  qpsk_modem.cpp
fpga/hls/rssi_meter/: hls_build.tcl  rssi_meter.cpp
fpga/hls/sync_detector/: hls_build.tcl  sync_detector.cpp
include/sdr/crypto/: AESCipher.hpp
include/sdr/dsp/: AGC.hpp  CostasLoop.hpp  FFTSpectrum.hpp  RRCFilter.hpp  TimingSync.hpp
include/sdr/fec/: ReedSolomon.hpp
include/sdr/framing/: Deframer.hpp  Frame.hpp  Framer.hpp
include/sdr/hardware/: FPGARegs.hpp  PlutoSDR.hpp
include/sdr/modem/: AdaptiveModem.hpp  IModem.hpp  Modem.hpp
include/sdr/stats/: LinkStats.hpp
include/sdr/transport/: ITransport.hpp  SPSCRing.hpp  TUNTAPDevice.hpp  UDPSocket.hpp
scripts/: deploy.sh  install-deps.sh  setup-service.sh
src/core/: CMakeLists.txt
src/core/crypto/: AESCipher.cpp
src/core/dsp/: AGC.cpp  CostasLoop.cpp  FFTSpectrum.cpp  RRCFilter.cpp  TimingSync.cpp
src/core/fec/: ReedSolomon.cpp
src/core/framing/: Deframer.cpp  Framer.cpp
src/core/hardware/: PlutoSDR.cpp
src/core/modem/: AdaptiveModem.cpp  Modem.cpp
src/core/stats/: LinkStats.cpp
src/core/transport/: TUNTAPDevice.cpp  UDPSocket.cpp
src/daemon/: CMakeLists.txt  Config.cpp  Config.hpp  Controller.cpp  Controller.hpp  StatsExporter.cpp  StatsExporter.hpp  main.cpp
src/daemon/modes/: BridgeMode.cpp  BridgeMode.hpp  IMode.hpp  MeshMode.cpp  MeshMode.hpp  P2PMode.cpp  P2PMode.hpp  ScanMode.cpp  ScanMode.hpp
src/monitor/: server.py
src/monitor/static/: app.js  style.css
src/monitor/templates/: index.html
src/tools/: live_stats.cpp
tests/: CMakeLists.txt  main.cpp  test_crypto.cpp  test_dsp.cpp  test_fec.cpp  test_framing.cpp  test_modem.cpp
tezuka-plutoplus-v0.3.5-7cf6171/: boot.dfu  boot.frm
tezuka-plutoplus-v0.3.5-7cf6171/sdimg/: devicetree.dtb
tezuka-plutoplus-v0.3.5-7cf6171/sdimg/overclock/: BOOT_fsbl40_32  BOOT_fsbl58_36
webui/: server.py
webui/templates/: index.html
